--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "core-js": "^2.6.8",
-    "qs": "^6.7.0"
+    "qs": "^6.7.0",
+    "vue-router": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
