--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "core-js": "^2.6.8",
+    "moment": "^2.24.0",
     "qs": "^6.7.0",
     "vue-router": "^3.0.6"
   },
