--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "core-js": "^2.6.8",
+    "element-ui": "^2.9.1",
     "moment": "^2.24.0",
     "qs": "^6.7.0",
+    "vue": "^2.6.10",
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@babel/runtime-corejs2": "^7.4.5",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^2.0.2",
+    "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
@@ -37,6 +40,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.31.0",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-jarvis": "^0.3.2"
   }
 }
