--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["@babel/env"],
   "plugins": [
-    "@babel/transform-runtime"
+    "@babel/transform-runtime",
+    "@babel/plugin-syntax-dynamic-import"
   ]
 }
