--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@babel/runtime": "^7.4.5",
     "@babel/runtime-corejs2": "^7.4.5",
     "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^2.0.2",
+    "babel-plugin-component": "^1.1.1",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "glob": "^7.1.4",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
