--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": ["@babel/env"],
   "plugins": [
-    "@babel/transform-runtime",
+    "@babel/plugin-transform-runtime",
     "@babel/plugin-syntax-dynamic-import",
     [
       "component",
