--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/runtime": "^7.4.5",
     "@babel/runtime-corejs2": "^7.4.5",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-component": "^1.1.1",
     "clean-webpack-plugin": "^3.0.0",
