--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "build-dev": "cross-env NODE_ENV=development webpack",
     "build": "cross-env NODE_ENV=production webpack",
+    "copy-dev": "node dev/copy-dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.0.0",
     "core-js": "^2.6.8",
     "element-ui": "^2.9.1",
@@ -22,6 +22,7 @@
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/plugin-transform-runtime": "^7.4.4",
