--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/runtime": "^7.4.5",
@@ -39,6 +39,7 @@
     "file-loader": "^4.0.0",
     "glob": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
+    "naming-style": "^1.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
