--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "description": "智慧养老平台后台Web前端项目",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack",
+    "start": "cross-env NODE_ENV=development webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack",
-    "copy-dev": "node dev/copy-dev.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "copy-dev": "node dev/copy-dev.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "axios": "^0.19.0",
     "core-js": "^3.1.4",
     "element-ui": "^2.10.0",
-    "fingerprint": "0.0.1",
     "moment": "^2.24.0",
     "qs": "^6.7.0",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
@@ -38,7 +38,7 @@
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
     "glob": "^7.1.4",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^3.0.7",
     "naming-style": "^1.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
