--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.1.4",
     "element-ui": "^2.10.0",
+    "left-pad": "^1.3.0",
     "moment": "^2.24.0",
     "qs": "^6.7.0",
     "vue": "^2.6.10",
