--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/polyfill": "^7.4.4",
     "axios": "^0.19.0",
     "core-js": "^3.1.4",
+    "echarts": "^4.2.1",
     "element-ui": "^2.10.0",
     "left-pad": "^1.3.0",
     "moment": "^2.24.0",
